--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["Your Name <you@example.com>"]
 python = ">=3.9.6,<3.11"
 httptools = "^0.4.0"
 tensorflow-gpu = "^2.9.2"
+fastapi = "^0.85.0"
 
 [tool.poetry.dev-dependencies]
 
