--- a/app/package.json
+++ b/app/package.json
@@ -16,11 +16,13 @@
     "@mui/icons-material": "^5.4.4",
     "@mui/material": "^5.4.4",
     "axios": "^0.26.1",
+    "buffer": "^6.0.3",
     "mini-css-extract-plugin": "^2.6.0",
     "notistack": "^2.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-node": "^1.0.2"
+    "react-node": "^1.0.2",
+    "react-router-dom": "^6.4.0"
   },
   "devDependencies": {
     "@types/react": "^17.0.39",
