--- a/app/package.json
+++ b/app/package.json
@@ -15,8 +15,11 @@
     "@fontsource/roboto": "^4.5.8",
     "@mui/icons-material": "^5.4.4",
     "@mui/material": "^5.4.4",
+    "@tensorflow/tfjs": "^4.0.0",
+    "@tensorflow/tfjs-backend-wasm": "^4.0.0",
     "axios": "^0.26.1",
     "buffer": "^6.0.3",
+    "file-loader": "^6.2.0",
     "mini-css-extract-plugin": "^2.6.0",
     "notistack": "^2.0.3",
     "react": "^17.0.2",
