--- a/app/package.json
+++ b/app/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack serve --port 3000",
-    "build": "set NODE_ENV=production && webpack"
+    "build": "export NODE_ENV=production&&webpack",
+    "export": "sudo rm -r /var/www/html/picasso/ && sudo cp -r ./build /var/www/html/picasso"
   },
   "author": "",
   "license": "ISC",
@@ -25,6 +26,7 @@
   "devDependencies": {
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.13",
+    "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.0",
     "html-webpack-plugin": "^5.5.0",
     "ts-loader": "^9.2.7",
